<resources>
    <string name="app_name">MyApplication</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="delete">删除</string>
    <string name="delete_select">删除选中</string>
    <string name="delete_all">删除全部</string>
    <string name="delete_point">删除点</string>
    <string name="boundary">边界</string>
    <string name="expand">展开</string>
    <string name="add">添加</string>
    <string name="add_point">添加点</string>
    <string name="feature">特点</string>
    <string name="auto_exc">全自动</string>
    <string name="auto_code">代码</string>
    <string name="preview">预览</string>
    <string name="preview1">预览区域</string>
    <string name="attribute">属性</string>
    <string name="create_new">新增</string>
    <string name="filter_rule">过滤规则</string>

    <string name="select_picture">选择图片</string>
    <string name="select_critical_area">选择关键区域</string>

    <string name="image_feature_extraction">图片特征提取</string>
    <string name="characters_feature_extraction">文字识别</string>
    <string name="all_feature_extraction">全点特征提取</string>
    <string name="shadow_feature_extraction">阴影识别</string>
    <string name="rich_color_image_recognition">富颜色识别</string>
    <string name="calculate_space">测距</string>
    <string name="hsv_filter">hsv过滤</string>
    <string name="add_hsv_filter">添加HSV过滤规则</string>

    <string name="merge">合并</string>
    <string name="background">设为底色</string>
    <string name="useBackground">补充底色</string>
    <string name="test_pick_up_points">测试代码</string>
    <string name="test_pick_up_points1">测试代码多图</string>


    <string name="add_rectangle_click_are">点击方形区域</string>
    <string name="add_circular_click_are">点击圆形区域</string>
    <string name="inverse_value">底色取反</string>
    <string name="find_the_image_area">找图区域</string>
    <string name="take_point_interval">总取点数</string>
    <string name="find_image_area">找图区域</string>
    <string name="clear_find_image_area">清除找图区域</string>
    <string name="start_screen">开启录屏</string>

    <string name="accessibility_service_label">autoTake</string>
    <string name="accessibility_service_description">autoTakeImg</string>
    <string name="ok">确定</string>
    <string name="clear">清除</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="all_point_key">全点取特</string>
    <string name="filter_out_areas">过滤掉区域</string>
    <string name="full_screen">全屏幕</string>
    <string name="mini_steps">最小步数</string>
    <string name="sort_by_x">x轴倒序</string>
    <string name="offset_value">底色取差</string>
    <string name="take_img">截图</string>
    <string name="take_img_continue">连续截图</string>
    <string name="replace_img">替换图片</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_is_do">标签</string>
    <string name="result_is_effective">有效</string>
    <string name="result_is_pass">目标</string>
    <string name="has_find_t">检查到目标</string>
    <string name="un_has_find_t">未检测到目标</string>
    <string name="check_target_object">目标检测实体</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="function_list">功能列表</string>
    <string name="function_detail">功能详情</string>
</resources>