<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_area"
        android:orderInCategory="100"
        android:title="选择区域"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_area"
        android:orderInCategory="100"
        android:title="预览选中"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_select"
        android:orderInCategory="100"
        android:title="@string/delete_select"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>